WorldSaveZipper converted to Storeable

--- a/common/src/main/resources/assets/worldtools/lang/de_de.json
+++ b/common/src/main/resources/assets/worldtools/lang/de_de.json
@@ -2,23 +2,24 @@
   "text.autoconfig.worldtools.option.advanced": "Erweitert",
   "text.autoconfig.worldtools.option.advanced.accentColor": "Aktzentfarbe (RGB Hex)",
   "text.autoconfig.worldtools.option.advanced.anonymousMode": "Anonyme Koordinaten",
-  "text.autoconfig.worldtools.option.advanced.autoDownload": "Download automatisch starten",
   "text.autoconfig.worldtools.option.advanced.captureBarColor": "Aufzeichnungsbalkenfarbe (RGB Hex)",
   "text.autoconfig.worldtools.option.advanced.captureBarStyle": "Aufzeichnungsbalkenstil",
-  "text.autoconfig.worldtools.option.advanced.containerColor": "Kontainerfarbe (RGB Hex)",
   "text.autoconfig.worldtools.option.advanced.progressBarColor": "Vortschrittsbalkenfarbe (RGB Hex)",
   "text.autoconfig.worldtools.option.advanced.progressBarStyle": "Vortschrittsbalkenstil",
   "text.autoconfig.worldtools.option.advanced.progressBarTimeout": "Vortschrittsbalken Anzeigedauer (ms)",
-  "text.autoconfig.worldtools.option.advanced.renderNotYetCachedContainers": "Rendere bisher nicht analysierte Kontainer",
   "text.autoconfig.worldtools.option.advanced.showChatMessages": "Info Chat Nachrichten anzeigen",
   "text.autoconfig.worldtools.option.advanced.showToasts": "Info Toasts anzeigen",
   "text.autoconfig.worldtools.option.capture": "Aufnahme",
   "text.autoconfig.worldtools.option.capture.advancements": "Erfolge",
+  "text.autoconfig.worldtools.option.capture.autoDownload": "Download automatisch starten",
   "text.autoconfig.worldtools.option.capture.chunks": "Chunks",
+  "text.autoconfig.worldtools.option.capture.compressLevel": "Welt als ZIP speichern",
+  "text.autoconfig.worldtools.option.capture.containerColor": "Kontainerfarbe (RGB Hex)",
   "text.autoconfig.worldtools.option.capture.entities": "Entitäten",
   "text.autoconfig.worldtools.option.capture.levelData": "Level.dat",
   "text.autoconfig.worldtools.option.capture.metadata": "Metadaten",
   "text.autoconfig.worldtools.option.capture.players": "Spieler",
+  "text.autoconfig.worldtools.option.capture.renderNotYetCachedContainers": "Rendere bisher nicht analysierte Kontainer",
   "text.autoconfig.worldtools.option.capture.statistics": "Statistiken",
   "text.autoconfig.worldtools.option.entity": "Entität",
   "text.autoconfig.worldtools.option.entity.invulnerable": "Unverwundbar",
@@ -55,6 +56,7 @@
   "worldtools.capture.saved.advancements": "Erfolge des Spielers %s gespeichert",
   "worldtools.capture.saved.chunks": "Chunk bei %s in Dimension %s gespeichert",
   "worldtools.capture.saved.chunks.anonymized": "Chunk in Dimension %s gespeichert",
+  "worldtools.capture.saved.compressed": "Komprimierte Aufnahme als %s gespeichert",
   "worldtools.capture.saved.end_flow": "Aufnahme von %s beendet",
   "worldtools.capture.saved.entities": "Entitäten %s in Chunk %s in Dimension %s gespeichert",
   "worldtools.capture.saved.entities.anonymized": "Entitäten %s in Dimension %s gespeichert",
@@ -66,6 +68,8 @@
   "worldtools.capture.to_directory": " in das Verzeichnis ",
   "worldtools.capture.took": " (in %s)",
   "worldtools.gui.browser.title": "WorldTools Browser",
+  "worldtools.gui.capture.existing_world_confirm.message": "Die Welt \"%s\" existiert bereits. Soll sie überschrieben werden?",
+  "worldtools.gui.capture.existing_world_confirm.title": "Welt existiert bereits",
   "worldtools.gui.escape.button.finish_download": "Aufzeichnung von %s speichern",
   "worldtools.gui.manager.button.cancel": "Abbrechen",
   "worldtools.gui.manager.button.config": "Konfiguration",
@@ -75,10 +79,11 @@
   "worldtools.key.categories": "WeltWerkzeuge",
   "worldtools.key.open_config": "Konfiguration öffnen",
   "worldtools.key.toggle_capture": "Aufnahme starten/stoppen",
-  "worldtools.log.error.already_capturing": "A capture for %s is already running!",
+  "worldtools.log.error.already_capturing": "Es läuft bereits eine Aufnahme!",
   "worldtools.log.error.failed_to_create_session": "Fehler beim Erstellen der Sitzung für \"%s\"! (Error: %s)",
-  "worldtools.log.error.failed_to_save_level": "Failed to save level.dat for \"%s\"! (error: %s)",
-  "worldtools.log.error.not_capturing": "No capture is running yet!",
+  "worldtools.log.error.failed_to_save_level": "Fehler beim Speichern von Level.dat für \"%s\"! (Error: %s)",
+  "worldtools.log.error.failed_to_zip": "Fehler beim Komprimieren von \"%s\"! (Error: %s)",
+  "worldtools.log.error.not_capturing": "Es läuft noch keine Aufnahme!",
   "worldtools.log.error.world_name_too_long": "Weltname \"%s\" darf nicht länger als %d Zeichen sein!",
   "worldtools.log.info.started_capture": "Aufnahme von %s gestartet...",
   "worldtools.log.info.stopping_capture": "Aufnahme von %s wird gestoppt..."
