--- a/common/src/main/resources/assets/worldtools/lang/en_us.json
+++ b/common/src/main/resources/assets/worldtools/lang/en_us.json
@@ -2,25 +2,25 @@
   "text.autoconfig.worldtools.option.advanced": "Advanced",
   "text.autoconfig.worldtools.option.advanced.accentColor": "Accent Color (RGB Hex)",
   "text.autoconfig.worldtools.option.advanced.anonymousMode": "Anonymize Coordinates",
-  "text.autoconfig.worldtools.option.advanced.autoDownload": "Automatically start download on join",
   "text.autoconfig.worldtools.option.advanced.captureBarColor": "Capture Info Bar Color (RGB Hex)",
   "text.autoconfig.worldtools.option.advanced.captureBarStyle": "Capture Info Bar Style",
-  "text.autoconfig.worldtools.option.advanced.containerColor": "Missing Container Color (RGB Hex)",
   "text.autoconfig.worldtools.option.advanced.progressBarColor": "Progress Bar Color (RGB Hex)",
   "text.autoconfig.worldtools.option.advanced.progressBarStyle": "Progress Bar Style",
   "text.autoconfig.worldtools.option.advanced.progressBarTimeout": "Progress Bar Timeout (ms)",
-  "text.autoconfig.worldtools.option.advanced.renderNotYetCachedContainers": "Render Not Yet Cached Containers",
   "text.autoconfig.worldtools.option.advanced.showChatMessages": "Info Chat Messages",
   "text.autoconfig.worldtools.option.advanced.showToasts": "Display Toasts",
   "text.autoconfig.worldtools.option.capture": "Capture",
   "text.autoconfig.worldtools.option.capture.advancements": "Advancements",
+  "text.autoconfig.worldtools.option.capture.autoDownload": "Automatically start download on join",
   "text.autoconfig.worldtools.option.capture.chunks": "Chunks",
+  "text.autoconfig.worldtools.option.capture.compressLevel": "Save Capture as ZIP",
+  "text.autoconfig.worldtools.option.capture.containerColor": "Missing Container Color (RGB Hex)",
   "text.autoconfig.worldtools.option.capture.entities": "Entities",
   "text.autoconfig.worldtools.option.capture.levelData": "Level.dat",
   "text.autoconfig.worldtools.option.capture.metadata": "Metadata",
   "text.autoconfig.worldtools.option.capture.players": "Players",
+  "text.autoconfig.worldtools.option.capture.renderNotYetCachedContainers": "Render Not Yet Cached Containers",
   "text.autoconfig.worldtools.option.capture.statistics": "Statistics",
-  "text.autoconfig.worldtools.option.capture.zipCapture": "Zip Capture",
   "text.autoconfig.worldtools.option.entity": "Entity",
   "text.autoconfig.worldtools.option.entity.invulnerable": "Invulnerable",
   "text.autoconfig.worldtools.option.entity.modifyNBT": "Modify NBT",
@@ -56,6 +56,7 @@
   "worldtools.capture.saved.advancements": "Saved advancements of %s",
   "worldtools.capture.saved.chunks": "Saved chunk at %s in dimension %s",
   "worldtools.capture.saved.chunks.anonymized": "Saved chunk in dimension %s",
+  "worldtools.capture.saved.compressed": "Saved ZIP of capture as %s",
   "worldtools.capture.saved.end_flow": "Finished capture of %s",
   "worldtools.capture.saved.entities": "Saved %s in chunk %s in dimension %s",
   "worldtools.capture.saved.entities.anonymized": "Saved %s in dimension %s",
@@ -67,20 +68,21 @@
   "worldtools.capture.to_directory": " to saves directory ",
   "worldtools.capture.took": " (took %s)",
   "worldtools.gui.browser.title": "WorldTools Browser",
+  "worldtools.gui.capture.existing_world_confirm.message": "A save named: \"%s\" already exists. Overwrite it?",
+  "worldtools.gui.capture.existing_world_confirm.title": "Existing World Found",
   "worldtools.gui.escape.button.finish_download": "Save capture of %s",
   "worldtools.gui.manager.button.cancel": "Cancel",
   "worldtools.gui.manager.button.config": "Config",
   "worldtools.gui.manager.button.start_download": "Start download",
   "worldtools.gui.manager.title": "WorldTools Manager",
   "worldtools.gui.manager.world_name_placeholder": "Enter world name... (default: %s)",
-  "worldtools.gui.capture.existing_world_confirm.title": "Existing World Found",
-  "worldtools.gui.capture.existing_world_confirm.message": "A save named: \"%s\" already exists. Overwrite it?",
   "worldtools.key.categories": "WorldTools",
   "worldtools.key.open_config": "Open configuration",
   "worldtools.key.toggle_capture": "Quick download",
   "worldtools.log.error.already_capturing": "A capture for %s is already running!",
   "worldtools.log.error.failed_to_create_session": "Failed to create session for \"%s\"! (error: %s)",
   "worldtools.log.error.failed_to_save_level": "Failed to save level.dat for \"%s\"! (error: %s)",
+  "worldtools.log.error.failed_to_zip": "Failed to zip capture of %s! (error: %s)",
   "worldtools.log.error.not_capturing": "No capture is running yet!",
   "worldtools.log.error.world_name_too_long": "World name \"%s\" is too long! (max %d characters)",
   "worldtools.log.info.started_capture": "Started capturing %s...",
