GUI cleanup and enter to download

--- a/common/src/main/resources/assets/worldtools/lang/de_de.json
+++ b/common/src/main/resources/assets/worldtools/lang/de_de.json
@@ -82,7 +82,8 @@
   "worldtools.log.error.already_capturing": "Es läuft bereits eine Aufnahme!",
   "worldtools.log.error.failed_to_create_session": "Fehler beim Erstellen der Sitzung für \"%s\"! (Error: %s)",
   "worldtools.log.error.failed_to_save_level": "Fehler beim Speichern von Level.dat für \"%s\"! (Error: %s)",
-  "worldtools.log.error.failed_to_zip": "Fehler beim Komprimieren von \"%s\"! (Error: %s)",
+  "worldtools.log.error.failed_to_visit_file": "Fehler beim Anfragen der Datei \"%s\" um sie zu Komprimieren! (Error: %s)",
+  "worldtools.log.error.failed_to_zip": "Fehler beim Erstellen einer Sitzung zum Komprimieren von \"%s\"! (Error: %s)",
   "worldtools.log.error.not_capturing": "Es läuft noch keine Aufnahme!",
   "worldtools.log.error.world_name_too_long": "Weltname \"%s\" darf nicht länger als %d Zeichen sein!",
   "worldtools.log.info.started_capture": "Aufnahme von %s gestartet...",
