--- a/common/src/main/resources/assets/worldtools/lang/en_us.json
+++ b/common/src/main/resources/assets/worldtools/lang/en_us.json
@@ -74,6 +74,7 @@
   "worldtools.gui.manager.button.cancel": "Cancel",
   "worldtools.gui.manager.button.config": "Config",
   "worldtools.gui.manager.button.start_download": "Start download",
+  "worldtools.gui.manager.button.stop_download": "Stop download",
   "worldtools.gui.manager.title": "WorldTools Manager",
   "worldtools.gui.manager.world_name_placeholder": "Enter world name... (default: %s)",
   "worldtools.key.categories": "WorldTools",
@@ -82,7 +83,8 @@
   "worldtools.log.error.already_capturing": "A capture for %s is already running!",
   "worldtools.log.error.failed_to_create_session": "Failed to create session for \"%s\"! (error: %s)",
   "worldtools.log.error.failed_to_save_level": "Failed to save level.dat for \"%s\"! (error: %s)",
-  "worldtools.log.error.failed_to_zip": "Failed to zip capture of %s! (error: %s)",
+  "worldtools.log.error.failed_to_zip": "Failed to create session to zip capture of %s! (error: %s)",
+  "worldtools.log.error.failed_to_visit_file": "Failed accessing file %s to create a zip! (error: %s)",
   "worldtools.log.error.not_capturing": "No capture is running yet!",
   "worldtools.log.error.world_name_too_long": "World name \"%s\" is too long! (max %d characters)",
   "worldtools.log.info.started_capture": "Started capturing %s...",
