--- a/common/src/main/resources/assets/worldtools/lang/de_de.json
+++ b/common/src/main/resources/assets/worldtools/lang/de_de.json
@@ -74,6 +74,7 @@
   "worldtools.gui.manager.button.cancel": "Abbrechen",
   "worldtools.gui.manager.button.config": "Konfiguration",
   "worldtools.gui.manager.button.start_download": "Herunterladen",
+  "worldtools.gui.manager.button.stop_download": "Download stoppen",
   "worldtools.gui.manager.title": "WorldTools Verwaltung",
   "worldtools.gui.manager.world_name_placeholder": "Weltname eingeben... (Default: %s)",
   "worldtools.key.categories": "WeltWerkzeuge",
@@ -87,5 +88,6 @@
   "worldtools.log.error.not_capturing": "Es läuft noch keine Aufnahme!",
   "worldtools.log.error.world_name_too_long": "Weltname \"%s\" darf nicht länger als %d Zeichen sein!",
   "worldtools.log.info.started_capture": "Aufnahme von %s gestartet...",
-  "worldtools.log.info.stopping_capture": "Aufnahme von %s wird gestoppt..."
+  "worldtools.log.info.stopping_capture": "Aufnahme von %s wird gestoppt...",
+  "worldtools.log.info.singleplayer_capture": "EXPERIMENTELL: Die Aufnahme von Einzelspieler Welten ist noch nicht vollständig getestet und kann zu Fehlern führen!"
 }
