--- a/common/src/main/resources/assets/worldtools/lang/en_us.json
+++ b/common/src/main/resources/assets/worldtools/lang/en_us.json
@@ -19,6 +19,7 @@
   "text.autoconfig.worldtools.option.capture.levelData": "Level.dat",
   "text.autoconfig.worldtools.option.capture.metadata": "Metadata",
   "text.autoconfig.worldtools.option.capture.players": "Players",
+  "text.autoconfig.worldtools.option.capture.maps": "Maps",
   "text.autoconfig.worldtools.option.capture.renderNotYetCachedContainers": "Render Not Yet Cached Containers",
   "text.autoconfig.worldtools.option.capture.statistics": "Statistics",
   "text.autoconfig.worldtools.option.entity": "Entity",
@@ -65,6 +66,7 @@
   "worldtools.capture.saved.player": "Saved player %s at %s in dimension %s",
   "worldtools.capture.saved.player.anonymized": "Saved player %s in dimension %s",
   "worldtools.capture.saved.statistics": "Saved statistics of %s",
+  "worldtools.capture.saved.mapData": "Saved maps in dimension %s",
   "worldtools.capture.to_directory": " to saves directory ",
   "worldtools.capture.took": " (took %s)",
   "worldtools.gui.browser.title": "WorldTools Browser",
