--- a/common/src/main/resources/assets/worldtools/lang/de_de.json
+++ b/common/src/main/resources/assets/worldtools/lang/de_de.json
@@ -19,6 +19,7 @@
   "text.autoconfig.worldtools.option.capture.levelData": "Level.dat",
   "text.autoconfig.worldtools.option.capture.metadata": "Metadaten",
   "text.autoconfig.worldtools.option.capture.players": "Spieler",
+  "text.autoconfig.worldtools.option.capture.maps": "Karten",
   "text.autoconfig.worldtools.option.capture.renderNotYetCachedContainers": "Rendere bisher nicht analysierte Kontainer",
   "text.autoconfig.worldtools.option.capture.statistics": "Statistiken",
   "text.autoconfig.worldtools.option.entity": "Entität",
@@ -65,6 +66,7 @@
   "worldtools.capture.saved.player": "Spieler %s bei %s in Dimension %s gespeichert",
   "worldtools.capture.saved.player.anonymized": "Spieler %s in Dimension %s gespeichert",
   "worldtools.capture.saved.statistics": "Statistiken von %s gespeichert.",
+  "worldtools.capture.saved.mapData": "Karten %s in Dimension %s gespeichert",
   "worldtools.capture.to_directory": " in das Verzeichnis ",
   "worldtools.capture.took": " (in %s)",
   "worldtools.gui.browser.title": "WorldTools Browser",
