--- a/common/src/main/resources/assets/worldtools/lang/de_de.json
+++ b/common/src/main/resources/assets/worldtools/lang/de_de.json
@@ -40,6 +40,12 @@
   "text.autoconfig.worldtools.option.world.doWeatherCycle": "Wetterzyklus",
   "text.autoconfig.worldtools.option.world.keepInventory": "Inventar behalten",
   "text.autoconfig.worldtools.option.world.modifyGameRules": "Spielregeln modifizieren",
+  "text.autoconfig.worldtools.option.debug": "Debuggen",
+  "text.autoconfig.worldtools.option.debug.logSettings": "Protokolleinstellungen",
+  "text.autoconfig.worldtools.option.debug.logSavedChunks": "Gespeicherte Blöcke protokollieren",
+  "text.autoconfig.worldtools.option.debug.logSavedEntities": "Gespeicherte Entitäten protokollieren",
+  "text.autoconfig.worldtools.option.debug.logSavedContainers": "Gespeicherte Container protokollieren",
+  "text.autoconfig.worldtools.option.debug.logSavedMaps": "Protokollieren Sie gespeicherte Karten",
   "text.autoconfig.worldtools.title": "WorldTools Konfiguration",
   "worldtools.capture.and": " und ",
   "worldtools.capture.chunk": "%s Chunk",
