--- a/common/src/main/resources/assets/worldtools/lang/en_us.json
+++ b/common/src/main/resources/assets/worldtools/lang/en_us.json
@@ -40,6 +40,12 @@
   "text.autoconfig.worldtools.option.world.doWeatherCycle": "Weather Cycle",
   "text.autoconfig.worldtools.option.world.keepInventory": "Keep Inventory",
   "text.autoconfig.worldtools.option.world.modifyGameRules": "Modify Game Rules",
+  "text.autoconfig.worldtools.option.debug": "Debug",
+  "text.autoconfig.worldtools.option.debug.logSettings": "Log Settings",
+  "text.autoconfig.worldtools.option.debug.logSavedChunks": "Log Saved Chunks",
+  "text.autoconfig.worldtools.option.debug.logSavedEntities": "Log Saved Entities",
+  "text.autoconfig.worldtools.option.debug.logSavedContainers": "Log Saved Containers",
+  "text.autoconfig.worldtools.option.debug.logSavedMaps": "Log Saved Maps",
   "text.autoconfig.worldtools.title": "WorldTools Config",
   "worldtools.capture.and": " and ",
   "worldtools.capture.chunk": "%s chunk",
