--- a/common/src/main/resources/assets/worldtools/lang/fr_ca.json
+++ b/common/src/main/resources/assets/worldtools/lang/fr_ca.json
@@ -46,9 +46,7 @@
   "text.autoconfig.worldtools.option.debug.logSavedEntities": "Log des entités sauvegardées",
   "text.autoconfig.worldtools.option.debug.logSavedContainers": "Log des conteneurs sauvegardés",
   "text.autoconfig.worldtools.option.debug.logSavedMaps": "Log des cartes sauvegardées",
-  "worldtools.gui.manager.title": "Gestionnaire WorldTools",
-  "worldtools.gui.manager.world_name_placeholder": "Entrez le nom du monde... (par défaut : %s)",
-  "worldtools.key.categories": "WorldTools"
+  "text.autoconfig.worldtools.title": "Configuration de WorldTools",
   "worldtools.capture.and": " et ",
   "worldtools.capture.chunk": "%s chunk",
   "worldtools.capture.chunks": "%s chunks",
@@ -85,7 +83,9 @@
   "worldtools.gui.manager.button.config": "Configuration",
   "worldtools.gui.manager.button.start_download": "Démarrer le téléchargement",
   "worldtools.gui.manager.button.stop_download": "Arrêter le téléchargement",
-  "worldtools.gui.manager.title": "WorldTools",
+  "worldtools.gui.manager.title": "Gestionnaire WorldTools",
+  "worldtools.gui.manager.world_name_placeholder": "Entrez le nom du monde... (par défaut : %s)",
+  "worldtools.key.categories": "WorldTools",
   "worldtools.key.open_config": "Ouvrir la configuration",
   "worldtools.key.toggle_capture": "Téléchargement rapide",
   "worldtools.log.error.already_capturing": "Une capture pour %s est déjà en cours !",
