--- a/common/src/main/resources/assets/worldtools/lang/en_us.json
+++ b/common/src/main/resources/assets/worldtools/lang/en_us.json
@@ -2,6 +2,7 @@
   "text.autoconfig.worldtools.option.advanced": "Advanced",
   "text.autoconfig.worldtools.option.advanced.accentColor": "Accent Color (RGB Hex)",
   "text.autoconfig.worldtools.option.advanced.anonymousMode": "Anonymize Coordinates",
+  "text.autoconfig.worldtools.option.advanced.hideExperimentalWorldGui": "Hide Experimental World GUI",
   "text.autoconfig.worldtools.option.advanced.captureBarColor": "Capture Info Bar Color (RGB Hex)",
   "text.autoconfig.worldtools.option.advanced.captureBarStyle": "Capture Info Bar Style",
   "text.autoconfig.worldtools.option.advanced.progressBarColor": "Progress Bar Color (RGB Hex)",
