Rewrite, proper container caching and new config layout

--- a/common/src/main/resources/assets/worldtools/lang/de_de.json
+++ b/common/src/main/resources/assets/worldtools/lang/de_de.json
@@ -46,7 +46,7 @@
   "text.autoconfig.worldtools.option.debug.logSavedChunks": "Gespeicherte Blöcke protokollieren",
   "text.autoconfig.worldtools.option.debug.logSavedEntities": "Gespeicherte Entitäten protokollieren",
   "text.autoconfig.worldtools.option.debug.logSavedContainers": "Gespeicherte Container protokollieren",
-  "text.autoconfig.worldtools.option.debug.logSavedMaps": "Protokollieren Sie gespeicherte Karten",
+  "text.autoconfig.worldtools.option.debug.logSavedMaps": "Gespeicherte Karten protokollieren",
   "text.autoconfig.worldtools.title": "WorldTools Konfiguration",
   "worldtools.capture.and": " und ",
   "worldtools.capture.chunk": "%s Chunk",
@@ -73,7 +73,7 @@
   "worldtools.capture.saved.player": "Spieler %s bei %s in Dimension %s gespeichert",
   "worldtools.capture.saved.player.anonymized": "Spieler %s in Dimension %s gespeichert",
   "worldtools.capture.saved.statistics": "Statistiken von %s gespeichert.",
-  "worldtools.capture.saved.mapData": "Karten %s in Dimension %s gespeichert",
+  "worldtools.capture.saved.mapData": "Karte %s in Dimension %s gespeichert",
   "worldtools.capture.to_directory": " in das Verzeichnis ",
   "worldtools.capture.took": " (in %s)",
   "worldtools.gui.browser.title": "WorldTools Browser",
