--- a/common/src/main/resources/assets/worldtools/lang/en_us.json
+++ b/common/src/main/resources/assets/worldtools/lang/en_us.json
@@ -1,52 +1,89 @@
 {
+  "text.autoconfig.worldtools.category.Advanced": "Advanced",
+  "text.autoconfig.worldtools.category.Debug": "Debug",
+  "text.autoconfig.worldtools.category.Entity": "Entity",
+  "text.autoconfig.worldtools.category.General": "General",
+  "text.autoconfig.worldtools.category.Render": "Render",
+  "text.autoconfig.worldtools.category.World": "World",
   "text.autoconfig.worldtools.option.advanced": "Advanced",
-  "text.autoconfig.worldtools.option.advanced.accentColor": "Accent Color (RGB Hex)",
-  "text.autoconfig.worldtools.option.advanced.anonymousMode": "Anonymize Coordinates",
+  "text.autoconfig.worldtools.option.advanced.anonymousMode": "Anonymize Coordinates in Interface",
+  "text.autoconfig.worldtools.option.advanced.anonymousMode.@Tooltip": "When enabled, the coordinates of the capture will be anonymized in the interface. CAUTION: This does not affect the actual data!",
   "text.autoconfig.worldtools.option.advanced.hideExperimentalWorldGui": "Hide Experimental World GUI",
-  "text.autoconfig.worldtools.option.advanced.captureBarColor": "Capture Info Bar Color (RGB Hex)",
-  "text.autoconfig.worldtools.option.advanced.captureBarStyle": "Capture Info Bar Style",
-  "text.autoconfig.worldtools.option.advanced.progressBarColor": "Progress Bar Color (RGB Hex)",
-  "text.autoconfig.worldtools.option.advanced.progressBarStyle": "Progress Bar Style",
-  "text.autoconfig.worldtools.option.advanced.progressBarTimeout": "Progress Bar Timeout (ms)",
+  "text.autoconfig.worldtools.option.advanced.hideExperimentalWorldGui.@Tooltip": "When enabled, the annoying popup after loading a world in singleplayer will be hidden.",
+  "text.autoconfig.worldtools.option.advanced.keepEnderChestContents": "Keep Ender Chest Contents between Captures",
   "text.autoconfig.worldtools.option.advanced.showChatMessages": "Info Chat Messages",
   "text.autoconfig.worldtools.option.advanced.showToasts": "Display Toasts",
-  "text.autoconfig.worldtools.option.capture": "Capture",
-  "text.autoconfig.worldtools.option.capture.advancements": "Advancements",
-  "text.autoconfig.worldtools.option.capture.autoDownload": "Automatically start download on join",
-  "text.autoconfig.worldtools.option.capture.chunks": "Chunks",
-  "text.autoconfig.worldtools.option.capture.compressLevel": "Save Capture as ZIP",
-  "text.autoconfig.worldtools.option.capture.containerColor": "Missing Container Color (RGB Hex)",
-  "text.autoconfig.worldtools.option.capture.entities": "Entities",
-  "text.autoconfig.worldtools.option.capture.levelData": "Level.dat",
-  "text.autoconfig.worldtools.option.capture.metadata": "Metadata",
-  "text.autoconfig.worldtools.option.capture.players": "Players",
-  "text.autoconfig.worldtools.option.capture.maps": "Maps",
-  "text.autoconfig.worldtools.option.capture.renderNotYetCachedContainers": "Render Not Yet Cached Containers",
-  "text.autoconfig.worldtools.option.capture.statistics": "Statistics",
-  "text.autoconfig.worldtools.option.entity": "Entity",
-  "text.autoconfig.worldtools.option.entity.invulnerable": "Invulnerable",
-  "text.autoconfig.worldtools.option.entity.modifyEntityNbt": "Modify NBT",
-  "text.autoconfig.worldtools.option.entity.noAI": "No AI",
-  "text.autoconfig.worldtools.option.entity.noGravity": "No Gravity",
-  "text.autoconfig.worldtools.option.entity.silent": "Silent",
-  "text.autoconfig.worldtools.option.world": "World",
-  "text.autoconfig.worldtools.option.world.doDaylightCycle": "Daylight Cycle",
-  "text.autoconfig.worldtools.option.world.doFireTick": "Fire Spread",
-  "text.autoconfig.worldtools.option.world.doMobGriefing": "Mob Griefing",
-  "text.autoconfig.worldtools.option.world.doMobSpawning": "Mob Spawning",
-  "text.autoconfig.worldtools.option.world.doPatrolSpawning": "Patrol Spawning",
-  "text.autoconfig.worldtools.option.world.doTraderSpawning": "Trader Spawning",
-  "text.autoconfig.worldtools.option.world.doVinesSpread": "Vines Spread",
-  "text.autoconfig.worldtools.option.world.doWardenSpawning": "Warden Spawning",
-  "text.autoconfig.worldtools.option.world.doWeatherCycle": "Weather Cycle",
-  "text.autoconfig.worldtools.option.world.keepInventory": "Keep Inventory",
-  "text.autoconfig.worldtools.option.world.modifyGameRules": "Modify Game Rules",
   "text.autoconfig.worldtools.option.debug": "Debug",
-  "text.autoconfig.worldtools.option.debug.logSettings": "Log Settings",
+  "text.autoconfig.worldtools.option.debug.@PrefixText": "Enabling debug options will make it easier to find issues, using the log file located at .minecraft/logs/latest.log",
   "text.autoconfig.worldtools.option.debug.logSavedChunks": "Log Saved Chunks",
-  "text.autoconfig.worldtools.option.debug.logSavedEntities": "Log Saved Entities",
   "text.autoconfig.worldtools.option.debug.logSavedContainers": "Log Saved Containers",
+  "text.autoconfig.worldtools.option.debug.logSavedEntities": "Log Saved Entities",
   "text.autoconfig.worldtools.option.debug.logSavedMaps": "Log Saved Maps",
+  "text.autoconfig.worldtools.option.debug.logSettings": "Log Settings",
+  "text.autoconfig.worldtools.option.debug.logZippingProgress": "Log Zipping Progress",
+  "text.autoconfig.worldtools.option.entity": "Entity",
+  "text.autoconfig.worldtools.option.entity.behavior": "Behavior",
+  "text.autoconfig.worldtools.option.entity.behavior.invulnerable": "Invulnerable",
+  "text.autoconfig.worldtools.option.entity.behavior.modifyEntityBehavior": "Modify Entity Behavior",
+  "text.autoconfig.worldtools.option.entity.behavior.modifyEntityBehavior.@Tooltip": "When enabled, the enabled tags will be added to the NBT. Otherwise, the entity behavior will be left untouched.",
+  "text.autoconfig.worldtools.option.entity.behavior.noAI": "No AI",
+  "text.autoconfig.worldtools.option.entity.behavior.noGravity": "No Gravity",
+  "text.autoconfig.worldtools.option.entity.behavior.silent": "Silent",
+  "text.autoconfig.worldtools.option.entity.censor": "Censor",
+  "text.autoconfig.worldtools.option.entity.censor.censorNames": "Censor Names",
+  "text.autoconfig.worldtools.option.entity.censor.lastDeathLocation": "Censor last death location",
+  "text.autoconfig.worldtools.option.entity.censor.lastDeathLocation.@Tooltip": "When enabled, the last death location of the player will not be saved to disk. Prevents leaking of coordinates.",
+  "text.autoconfig.worldtools.option.entity.censor.names": "Censor Entity Name",
+  "text.autoconfig.worldtools.option.entity.censor.owner": "Censor Entity Owner",
+  "text.autoconfig.worldtools.option.entity.metadata": "Metadata",
+  "text.autoconfig.worldtools.option.entity.metadata.captureTimestamp": "Capture Timestamp",
+  "text.autoconfig.worldtools.option.entity.metadata.waterMark": "Watermark",
+  "text.autoconfig.worldtools.option.general.autoDownload": "Automatically start download on join",
+  "text.autoconfig.worldtools.option.general.autoDownload.@Tooltip": "As soon as you join a world, a capture will be started",
+  "text.autoconfig.worldtools.option.general.capture": "What should be captured",
+  "text.autoconfig.worldtools.option.general.capture.@Tooltip": "When disabled, the corresponding data will not be saved to disk. This could result in incomplete captures!",
+  "text.autoconfig.worldtools.option.general.capture.advancements": "Advancements",
+  "text.autoconfig.worldtools.option.general.capture.chunks": "Chunks",
+  "text.autoconfig.worldtools.option.general.capture.entities": "Entities",
+  "text.autoconfig.worldtools.option.general.capture.levelData": "Level.dat",
+  "text.autoconfig.worldtools.option.general.capture.maps": "Maps",
+  "text.autoconfig.worldtools.option.general.capture.metadata": "Metadata",
+  "text.autoconfig.worldtools.option.general.capture.players": "Players",
+  "text.autoconfig.worldtools.option.general.capture.statistics": "Statistics",
+  "text.autoconfig.worldtools.option.general.compressLevel": "Archive capture as zip file",
+  "text.autoconfig.worldtools.option.general.compressLevel.@Tooltip": "When a capture is finished, it will be archived as a zip file",
+  "text.autoconfig.worldtools.option.render": "Render",
+  "text.autoconfig.worldtools.option.render.accentColor": "Accent Color (RGB Hex)",
+  "text.autoconfig.worldtools.option.render.captureBarColor": "Capture Info Bar Color (RGB Hex)",
+  "text.autoconfig.worldtools.option.render.captureBarStyle": "Capture Info Bar Style",
+  "text.autoconfig.worldtools.option.render.containerColor": "Missing Container Color (RGB Hex)",
+  "text.autoconfig.worldtools.option.render.progressBarColor": "Progress Bar Color (RGB Hex)",
+  "text.autoconfig.worldtools.option.render.progressBarStyle": "Progress Bar Style",
+  "text.autoconfig.worldtools.option.render.progressBarTimeout": "Progress Bar Timeout (ms)",
+  "text.autoconfig.worldtools.option.render.renderNotYetCachedContainers": "Render Not Yet Cached Containers",
+  "text.autoconfig.worldtools.option.world.censor": "Censor",
+  "text.autoconfig.worldtools.option.world.gameRules": "Game Rules",
+  "text.autoconfig.worldtools.option.world.gameRules.doDaylightCycle": "Daylight Cycle",
+  "text.autoconfig.worldtools.option.world.gameRules.doFireTick": "Fire Spread",
+  "text.autoconfig.worldtools.option.world.gameRules.doMobGriefing": "Mob Griefing",
+  "text.autoconfig.worldtools.option.world.gameRules.doMobSpawning": "Mob Spawning",
+  "text.autoconfig.worldtools.option.world.gameRules.doPatrolSpawning": "Patrol Spawning",
+  "text.autoconfig.worldtools.option.world.gameRules.doTraderSpawning": "Trader Spawning",
+  "text.autoconfig.worldtools.option.world.gameRules.doVinesSpread": "Vines Spread",
+  "text.autoconfig.worldtools.option.world.gameRules.doWardenSpawning": "Warden Spawning",
+  "text.autoconfig.worldtools.option.world.gameRules.doWeatherCycle": "Weather Cycle",
+  "text.autoconfig.worldtools.option.world.gameRules.keepInventory": "Keep Inventory",
+  "text.autoconfig.worldtools.option.world.gameRules.modifyGameRules": "Modify Game Rules",
+  "text.autoconfig.worldtools.option.world.gameRules.modifyGameRules.@Tooltip": "When enabled, the game rules will be modified to the values set in this config. Otherwise, the game rules will be left untouched.",
+  "text.autoconfig.worldtools.option.world.metadata": "Metadata",
+  "text.autoconfig.worldtools.option.world.metadata.captureTimestamp": "Store Timestamp of Capture",
+  "text.autoconfig.worldtools.option.world.metadata.waterMark": "Watermark Chunks",
+  "text.autoconfig.worldtools.option.world.worldGenerator": "World Generator",
+  "text.autoconfig.worldtools.option.world.worldGenerator.bonusChest": "Bonus Chest",
+  "text.autoconfig.worldtools.option.world.worldGenerator.generateFeatures": "Generate Features",
+  "text.autoconfig.worldtools.option.world.worldGenerator.seed": "Seed",
+  "text.autoconfig.worldtools.option.world.worldGenerator.type": "World Generate Type",
+  "text.autoconfig.worldtools.option.world.worldGenerator.type.@Tooltip": "For inference: VOID: Will generate an empty world. FLAT: Will generate a flat world. DEFAULT: Will generate a normal world.",
   "text.autoconfig.worldtools.title": "WorldTools Config",
   "worldtools.capture.and": " and ",
   "worldtools.capture.chunk": "%s chunk",
@@ -69,15 +106,15 @@
   "worldtools.capture.saved.entities": "Saved %s in chunk %s in dimension %s",
   "worldtools.capture.saved.entities.anonymized": "Saved %s in dimension %s",
   "worldtools.capture.saved.levelData": "Saved %s of %s",
+  "worldtools.capture.saved.mapData": "Saved maps in dimension %s",
   "worldtools.capture.saved.metadata": "Saved metadata of %s",
   "worldtools.capture.saved.player": "Saved player %s at %s in dimension %s",
   "worldtools.capture.saved.player.anonymized": "Saved player %s in dimension %s",
   "worldtools.capture.saved.statistics": "Saved statistics of %s",
-  "worldtools.capture.saved.mapData": "Saved maps in dimension %s",
   "worldtools.capture.to_directory": " to saves directory ",
   "worldtools.capture.took": " (took %s)",
   "worldtools.gui.browser.title": "WorldTools Browser",
-  "worldtools.gui.capture.existing_world_confirm.message": "A save named: \"%s\" already exists. Overwrite it?",
+  "worldtools.gui.capture.existing_world_confirm.message": "A save named: \"%s\" already exists. Overwrite it? (Will merge with existing data)",
   "worldtools.gui.capture.existing_world_confirm.title": "Existing World Found",
   "worldtools.gui.escape.button.finish_download": "Save capture of %s",
   "worldtools.gui.manager.button.cancel": "Cancel",
@@ -92,11 +129,11 @@
   "worldtools.log.error.already_capturing": "A capture for %s is already running!",
   "worldtools.log.error.failed_to_create_session": "Failed to create session for \"%s\"! (error: %s)",
   "worldtools.log.error.failed_to_save_level": "Failed to save level.dat for \"%s\"! (error: %s)",
-  "worldtools.log.error.failed_to_zip": "Failed to create session to zip capture of %s! (error: %s)",
   "worldtools.log.error.failed_to_visit_file": "Failed accessing file %s to create a zip! (error: %s)",
+  "worldtools.log.error.failed_to_zip": "Failed to create session to zip capture of %s! (error: %s)",
   "worldtools.log.error.not_capturing": "No capture is running yet!",
   "worldtools.log.error.world_name_too_long": "World name \"%s\" is too long! (max %d characters)",
+  "worldtools.log.info.singleplayer_capture": "EXPERIMENTAL: Capturing in singleplayer is experimental and may not work as expected!",
   "worldtools.log.info.started_capture": "Started capturing %s...",
-  "worldtools.log.info.stopping_capture": "Stopping capture %s...",
-  "worldtools.log.info.singleplayer_capture": "EXPERIMENTAL: Capturing in singleplayer is experimental and may not work as expected!"
+  "worldtools.log.info.stopping_capture": "Stopping capture %s..."
 }
