--- a/common/src/main/resources/assets/worldtools/lang/de_de.json
+++ b/common/src/main/resources/assets/worldtools/lang/de_de.json
@@ -19,12 +19,12 @@
   "text.autoconfig.worldtools.option.debug.logSavedContainers": "Gespeicherte Behältnisse protokollieren",
   "text.autoconfig.worldtools.option.debug.logSavedEntities": "Gespeicherte Entitäten protokollieren",
   "text.autoconfig.worldtools.option.debug.logSavedMaps": "Gespeicherte Maps protokollieren",
-  "text.autoconfig.worldtools.option.debug.logSettings": "Einestellungen protokollieren",
+  "text.autoconfig.worldtools.option.debug.logSettings": "Einstellungen protokollieren",
   "text.autoconfig.worldtools.option.debug.logZippingProgress": "Fortschritt der Verpackung des Downloads in ZIP Datei protokollieren",
   "text.autoconfig.worldtools.option.entity": "Entität",
   "text.autoconfig.worldtools.option.entity.behavior": "Verhalten",
   "text.autoconfig.worldtools.option.entity.behavior.invulnerable": "Unverwundbarkeit",
-  "text.autoconfig.worldtools.option.entity.behavior.modifyEntityBehavior": "Entitäten verhalten verändern",
+  "text.autoconfig.worldtools.option.entity.behavior.modifyEntityBehavior": "Verhalten der Entitäten verändern",
   "text.autoconfig.worldtools.option.entity.behavior.modifyEntityBehavior.@Tooltip": "Wenn diese Option aktiviert ist, werden die aktivierten Tags zu den NBT hinzugefügt. Andernfalls bleibt das Verhalten der Entitäten unberührt.",
   "text.autoconfig.worldtools.option.entity.behavior.noAI": "Keine KI",
   "text.autoconfig.worldtools.option.entity.behavior.noGravity": "Keine Gravitation",
@@ -39,10 +39,10 @@
   "text.autoconfig.worldtools.option.entity.metadata.captureTimestamp": "Zeitstempel aufnehmen",
   "text.autoconfig.worldtools.option.entity.metadata.waterMark": "Wasserzeichen",
   "text.autoconfig.worldtools.option.general.autoDownload": "Automatischer Download",
-  "text.autoconfig.worldtools.option.general.autoDownload.@Tooltip": "Automatischer Start des Downlaods beim betreten einer Mehrspieler Welt.",
+  "text.autoconfig.worldtools.option.general.autoDownload.@Tooltip": "Automatischer Start des Downloads beim betreten einer Mehrspieler Welt.",
   "text.autoconfig.worldtools.option.general.capture": "Was wird aufgenommen",
   "text.autoconfig.worldtools.option.general.capture.@Tooltip": "Wenn diese Funktion deaktiviert ist, werden die entsprechenden Daten nicht auf der Festplatte gespeichert. Dies kann zu unvollständigen Aufnahmen führen!",
-  "text.autoconfig.worldtools.option.general.capture.advancements": "Forschritte",
+  "text.autoconfig.worldtools.option.general.capture.advancements": "Fortschritte",
   "text.autoconfig.worldtools.option.general.capture.chunks": "Chunks",
   "text.autoconfig.worldtools.option.general.capture.entities": "Entitäten",
   "text.autoconfig.worldtools.option.general.capture.levelData": "Level.dat",
@@ -57,9 +57,9 @@
   "text.autoconfig.worldtools.option.render.captureBarColor": "Farbe des Aufnahme-Infobalkens",
   "text.autoconfig.worldtools.option.render.captureBarStyle": "Stil des Aufnahme-Infobalkens",
   "text.autoconfig.worldtools.option.render.containerColor": "Farbe fehlender Behältnisse (RGB Hex)",
-  "text.autoconfig.worldtools.option.render.progressBarColor": "Farbe des Fortschrittsbalkens (RGB Hex)",
-  "text.autoconfig.worldtools.option.render.progressBarStyle": "Stil des Fortschirttbalkens",
-  "text.autoconfig.worldtools.option.render.progressBarTimeout": "Ausblenden des Fotschrittbalkens nach (ms)",
+  "text.autoconfig.worldtools.option.render.progressBarColor": "Farbe des Fortschrittsbalkens",
+  "text.autoconfig.worldtools.option.render.progressBarStyle": "Stil des Fortschrittsbalkens",
+  "text.autoconfig.worldtools.option.render.progressBarTimeout": "Ausblenden des Fortschrittsbalkens nach (ms)",
   "text.autoconfig.worldtools.option.render.renderNotYetCachedContainers": "Rendern von noch nicht aufgenommenen Behältnissen",
   "text.autoconfig.worldtools.option.world.censor": "Zensur",
   "text.autoconfig.worldtools.option.world.gameRules": "Spielregeln",
