Escape quotation mark

--- a/common/src/main/resources/assets/worldtools/lang/nl_be.json
+++ b/common/src/main/resources/assets/worldtools/lang/nl_be.json
@@ -114,7 +114,7 @@
 "worldtools.capture.to_directory": " naar opslagmap ",
 "worldtools.capture.took": " (duurde %s)",
 "worldtools.gui.browser.title": "WorldTools Browser",
-"worldtools.gui.capture.existing_world_confirm.message": "Een opslag genaamd: "%s" bestaat al. Overschrijven? (Zal samenvoegen met bestaande gegevens)",
+"worldtools.gui.capture.existing_world_confirm.message": "Een opslag genaamd: \"%s\" bestaat al. Overschrijven? (Zal samenvoegen met bestaande gegevens)",
 "worldtools.gui.capture.existing_world_confirm.title": "Bestaande Wereld Gevonden",
 "worldtools.gui.escape.button.finish_download": "Opname van %s opslaan",
 "worldtools.gui.manager.button.cancel": "Annuleren",
@@ -127,12 +127,12 @@
 "worldtools.key.open_config": "Configuratie openen",
 "worldtools.key.toggle_capture": "Snelle download",
 "worldtools.log.error.already_capturing": "Er wordt al een opname gemaakt voor %s!",
-"worldtools.log.error.failed_to_create_session": "Kon geen sessie aanmaken voor "%s"! (fout: %s)",
-"worldtools.log.error.failed_to_save_level": "Kon level.dat niet opslaan voor "%s"! (fout: %s)",
+"worldtools.log.error.failed_to_create_session": "Kon geen sessie aanmaken voor \"%s\"! (fout: %s)",
+"worldtools.log.error.failed_to_save_level": "Kon level.dat niet opslaan voor \"%s\"! (fout: %s)",
 "worldtools.log.error.failed_to_visit_file": "Toegang tot bestand %s om een zip te maken is mislukt! (fout: %s)",
 "worldtools.log.error.failed_to_zip": "Kon geen sessie maken om opname van %s te zippen! (fout: %s)",
 "worldtools.log.error.not_capturing": "Er wordt nog geen opname gemaakt!",
-"worldtools.log.error.world_name_too_long": "Wereldnaam "%s" is te lang! (max %d karakters)",
+"worldtools.log.error.world_name_too_long": "Wereldnaam \"%s\" is te lang! (max %d karakters)",
 "worldtools.log.info.singleplayer_capture": "EXPERIMENTEEL: Opnemen in singleplayer is experimenteel en werkt mogelijk niet zoals verwacht!",
 "worldtools.log.info.started_capture": "%s opname gestart...",
 "worldtools.log.info.stopping_capture": "%s opname stoppen..."
