--- a/common/src/main/resources/assets/worldtools/lang/zh_tw.json
+++ b/common/src/main/resources/assets/worldtools/lang/zh_tw.json
@@ -32,7 +32,7 @@
   "text.autoconfig.worldtools.option.entity.censor": "隱藏",
   "text.autoconfig.worldtools.option.entity.censor.censorNames": "隱藏名稱",
   "text.autoconfig.worldtools.option.entity.censor.lastDeathLocation": "隱藏最後死亡位置",
-  "text.autoconfig.worldtools.option.entity.censor.lastDeathLocation.@Tooltip": "啟用後，玩家的最後死亡位置將不會被儲存到磁碟。防止座標洩漏。",
+  "text.autoconfig.worldtools.option.entity.censor.lastDeathLocation.@Tooltip": "啟用後，玩家的最後死亡位置將不會被儲存到硬碟。防止座標洩漏。",
   "text.autoconfig.worldtools.option.entity.censor.names": "隱藏實體名稱",
   "text.autoconfig.worldtools.option.entity.censor.owner": "隱藏實體擁有者",
   "text.autoconfig.worldtools.option.entity.metadata": "中繼資料",
@@ -41,7 +41,7 @@
   "text.autoconfig.worldtools.option.general.autoDownload": "加入時自動開始下載",
   "text.autoconfig.worldtools.option.general.autoDownload.@Tooltip": "當您加入世界時，將會開始擷取。",
   "text.autoconfig.worldtools.option.general.capture": "應該擷取什麼",
-  "text.autoconfig.worldtools.option.general.capture.@Tooltip": "停用後，相應的資料將不會被儲存到磁碟。這可能會導致擷取不完整！",
+  "text.autoconfig.worldtools.option.general.capture.@Tooltip": "停用後，相應的資料將不會被儲存到硬碟。這可能會導致擷取不完整！",
   "text.autoconfig.worldtools.option.general.capture.advancements": "進度",
   "text.autoconfig.worldtools.option.general.capture.chunks": "區塊",
   "text.autoconfig.worldtools.option.general.capture.entities": "實體",
